--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,7 +4,7 @@ test: True
 
 dataset_class_debug: False
 debug: False
-test_debug: False
+test_debug: True
 
 device: "cuda"
 
@@ -14,13 +14,13 @@ test_parameters:
 trainer:
   num_epochs: 600
   resume_training: False
-  train_checkpoint: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/PASCAL_3_2_10_SA/Training/DeepLabV3Plusefficientnet-b3/06102022_1001/epoch-300-loss-160.7034163.pth"
-  test_checkpoint: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/PASCAL_3_2_10_SA/Training/DeepLabV3Plusefficientnet-b2/06102022_1157/epoch-500-loss-30.0053769.pth"
+  train_checkpoint: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/PASCAL_3_2_10_SA/Training/DeepLabV3Plusefficientnet-b2/06102022_1157/epoch-500-loss-30.0053769.pth"
+  test_checkpoint: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/PASCAL_3_2_10_SA/Training/Unetresnet50/06102022_1727/epoch-599-loss-3.5723643.pth"
 
 data:
-  train_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10/base_classes/train/coco/"
-  val_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10/base_classes/val/coco/"
-  test_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10/base_classes/train/coco/"
+  train_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/train/coco/"
+  val_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/val/coco/"
+  test_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/train/coco/"
   train_aug: False
   train_batch_size: 4 
   val_batch_size: 4 
@@ -34,8 +34,8 @@ heatmap:
   fix_radius_value: 5
 
 smp:
-  model: "DeepLabV3Plus" #Unet" #"Unet" #DeepLabV3Plus"
-  encoder_name: "efficientnet-b2" #"resnet50" #"mobilenet_v2
+  model: "Unet" #Unet" #"Unet" #DeepLabV3Plus"
+  encoder_name: "resnet50" #"resnet50" #"mobilenet_v2
   encoder_weights: "imagenet" #"imagenet" #"swsl" #imagenet"
   decoder_output_classes: 16 #256 #16
   decoder_output_dimension: 320
@@ -61,5 +61,5 @@ logging:
 
 evaluation:
   heatmap_pooling_kernel: 3
-  topk_k: 5
+  topk_k: 1
   test_topk_k: 5
