--- a/configs/train_smp.yaml
+++ b/configs/train_smp.yaml
@@ -1,6 +1,6 @@
 version: 0
 
-train: False
+train: True
 test: True
 dataset_class_debug: False
 debug: False
@@ -9,9 +9,9 @@ device: "cuda"
 test_parameters:
   save_test_outputs: True
 trainer:
-  num_epochs: 600
-  resume_training: True
-  checkpoint_path: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/PASCAL_3_2_10/Unetresnet50/06102022_1918/epoch-350-loss-14.6737469.pth"
+  num_epochs: 300
+  resume_training: False
+  checkpoint_path: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/PASCAL_3_2_10/Unetresnet50/06102022_1954/epoch-300-loss-12.8079442.pth"
   val_save_interval: 50
   bbox_heatmap_loss: False
   bbox_scatter_loss: True
@@ -19,9 +19,9 @@ trainer:
   bbox_loss_start_epoch: -1
 
 data:
-  train_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10/base_classes/train/coco/"
-  val_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10/base_classes/val/coco/"
-  test_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10/base_classes/train/coco/"
+  train_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/train/coco/"
+  val_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/val/coco/"
+  test_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/train/coco/"
   train_aug: False
   train_batch_size: 5
   val_batch_size: 5
@@ -33,7 +33,7 @@ heatmap:
   radius_scaling: 16
   fix_radius: True
   fix_radius_value: 5
-max_objects_per_image: 5
+max_objects_per_image: 1
 smp:
   model: "Unet" #Unet" #"Unet" #DeepLabV3Plus"
   encoder_name: "resnet50" #"resnet50" #mobilenet_v2"
@@ -84,5 +84,5 @@ logging:
   display_log_fraction: 1
 evaluation:
   heatmap_pooling_kernel: 3
-  topk_k: 5
-  test_topk_k: 25
+  topk_k: 1
+  test_topk_k: 1
