--- a/configs/train_smp.yaml
+++ b/configs/train_smp.yaml
@@ -27,6 +27,7 @@ data:
   val_batch_size: 5
   test_batch_size: 1
   input_dimension: 320 # EfficientNetB2
+  num_workers: 4
   #   input_dimension: 384  ResNet18
 heatmap:
   output_dimension: 320
