--- a/configs/train_smp.yaml
+++ b/configs/train_smp.yaml
@@ -1,30 +1,30 @@
 version: 0
 
-train: False
+train: True
 test: True
 dataset_class_debug: False
 debug: False
-test_debug: False
+test_debug: True
 device: "cuda"
 test_parameters:
-  save_test_outputs: False
+  save_test_outputs: True
 trainer:
   num_epochs: 2000
-  resume_training: True
-  checkpoint_path: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/09102022_1233/epoch-50-loss-1.1275787.pth"
+  resume_training: False
+  checkpoint_path: "/home/psrahul/MasterThesis/repo/Phase6/Outputs/PASCAL_3_2_10_SA/Unetresnet50/09102022_1228/epoch-999-loss-27.6306324.pth"
   val_save_interval: 50
   bbox_heatmap_loss: False
   bbox_scatter_loss: True
-  embedding_loss_start_epoch: 600
-  bbox_loss_start_epoch: 300
+  embedding_loss_start_epoch: -1
+  bbox_loss_start_epoch: -1
 
 data:
-  train_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_15_5_SA/base_classes/train/coco/"
-  val_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_15_5_SA/base_classes/val/coco/"
-  test_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_15_5_SA/base_classes/train/coco/"
-  train_aug: False
-  train_batch_size: 4
-  val_batch_size: 4
+  train_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/train/coco/"
+  val_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/val/coco/"
+  test_data_root: "/home/psrahul/MasterThesis/datasets/PASCAL_3_2_10_SA/base_classes/train/coco/"
+  train_aug: True
+  train_batch_size: 5
+  val_batch_size: 5
   test_batch_size: 1
   input_dimension: 320 # EfficientNetB2
   num_workers: 4
